changed some UI interactions
